<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.galavantier.app.SignInActivity"
    android:id="@string/activity_fullscreen">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/fullscreen_content_controls">

    </FrameLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:background="#000000"
        android:id="@+id/fullscreen_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/imageView"
            android:src="@drawable/galavantier_logo_322x92"
            android:layout_gravity="center_horizontal|top"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="-15dp"
            android:layout_marginBottom="-10dp"
            android:contentDescription="@string/company_name"
            android:cropToPadding="true" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/username_input"
            android:background="#333333"
            android:focusable="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:editable="true"
            android:hint="@string/username_input"
            android:layout_below="@+id/login_text"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/password_input"
            android:background="#333333"
            android:hint="@string/password_input"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="15dp"
            android:focusable="true"
            android:layout_below="@+id/username_input"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="3dp"
            android:editable="true"
            android:inputType="text" />

        <Button android:id="@+id/sign_in_button"
            style="?metaButtonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#ffc000"
            android:textColor="#000000"
            android:layout_below="@+id/password_input"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="3dp"
            android:clickable="true"
            android:enabled="true"
            android:text="@string/sign_in_button"
            android:onClick="onClick" />

        <Button
            style="?metaButtonBarButtonStyle"
            android:id="@+id/create_account_switch_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_button"
            android:layout_gravity="bottom"
            android:textColor="#000000"
            android:background="#ffc000"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/sign_in_button"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clickable="true"
            android:enabled="true"
            android:onClick="onClick" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_text"
            android:background="#3399cc"
            android:autoText="false"
            android:text="@string/login_text"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_below="@+id/imageView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/login_text" />

    </RelativeLayout>

</FrameLayout>
